--- a/.github/workflows/build-options.yml
+++ b/.github/workflows/build-options.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout nix-darwin
         uses: actions/checkout@v4
         with:
-          name: LnL7/nix-darwin
+          repository: LnL7/nix-darwin
           ref: refs/heads/master
           path: nix-darwin
       - name: Install Nix
