--- a/.github/workflows/build-options.yml
+++ b/.github/workflows/build-options.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: result/share/doc/darwin/options.json
+          path: result/share/doc/darwin/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
