--- a/.github/workflows/build-options.yml
+++ b/.github/workflows/build-options.yml
@@ -39,7 +39,7 @@ jobs:
           mkdir site
           git -C nix-darwin rev-parse HEAD > site/revision
           nix-build ./nix-darwin/release.nix -I nixpkgs=channel:nixpkgs-23.11-darwin -I darwin=nix-darwin -A options
-          cp result/share/doc/darwin/options.json site/
+          cp result/share/doc/darwin/options.json{,.br} site/
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
