CI: on push, only run if workflow file changed

--- a/.github/workflows/build-options.yml
+++ b/.github/workflows/build-options.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - ".github/workflows/*.yml"
   schedule:
     - cron: "38 3 * * *"
   workflow_dispatch:
