--- a/.github/workflows/build-options.yml
+++ b/.github/workflows/build-options.yml
@@ -52,6 +52,10 @@ jobs:
           git -C home-manager rev-parse HEAD > site/home-manager/revision
           nix-build ./home-manager/default.nix -I nixpkgs=channel:nixpkgs-unstable -I home-manager=home-manager -A docs.json
           cp result/share/doc/home-manager/options.json{,.br} site/home-manager/
+      - name: Build stylix options.json
+        run: |
+          nix build github:brakenium/nix-options-json-wrapper#hmOptionsJSON
+          cp result/share/doc/stylix/options.json{,.br} site/stylix/
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
